Changed: CHECK.html u check.css, illustrations hinzugefügt - Fritz,Seda,Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -15,11 +15,11 @@
             <!-- Titel und Schalter werden für eine bessere mobile Ansicht zusammengefasst -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Navigation ein-/ausblenden</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+                <span class="sr-only">Navigation ein-/ausblenden</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
             </div>
 
             <!-- Alle Navigationslinks, Formulare und anderer Inhalt werden hier zusammengefasst und können dann ein- und ausgeblendet werden -->
@@ -73,7 +73,7 @@
                         </a>
                         <ul class="dropdown-menu" id="educationalPlan">
                             <li class="liste">
-                                <a href="#"><img alt="educationalPlan" src="images-master/educationalPlan-inactive.png"></a>
+                                <a href="#"><img alt="educationalPlan" src="images-master/educationalPlan-big.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">MATHE ZR BIS 10</a></li>
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="dropdown-menu" id="achievedCompetences">
                             <li class="liste">
-                                <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">DAS KANN ICH!</a>
+                                <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">DAS KANN ICH!</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
@@ -148,7 +148,7 @@
                             <img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
                         <ul class="dropdown-menu" id="superhero">
                             <li class="liste">
-                                <a href="#"><img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
+                                <a href="#"><img alt="superhero" src="images-master/student/superhero-robin-big-active.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">MEIN PROFIL ÄNDERN</a></li>
@@ -164,7 +164,7 @@
                         </a>
                         <ul class="dropdown-menu" id="school">
                             <li class="liste">
-                                <a href="#"><img alt="school" src="images-master/school/school-inactive.png"></a>
+                                <a href="#"><img alt="school" src="images-master/school/school-purple-big-active.png"></a>
                             </li>
                         </ul>
                     </li>
@@ -173,7 +173,7 @@
                             <img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
                         <ul class="dropdown-menu" id="studyGroup">
                             <li class="liste">
-                                <a href="#"><img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
+                                <a href="#"><img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_active-big.png"></a>
                             </li>
 
                         </ul>
@@ -183,7 +183,7 @@
                             <img alt="help" src="images-master/help-inactive.png"></a>
                         <ul class="dropdown-menu" id="help">
                             <li class="liste">
-                                <a href="#"><img alt="help" src="images-master/help-inactive.png">BRAUCHST DU HILFE?</a>
+                                <a href="#"><img alt="help" src="images-master/help-big.png">BRAUCHST DU HILFE?</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">SO GEHT'S!</a></li>
@@ -200,7 +200,7 @@
                             <img alt="logout" src="images-master/logout-iactive.png"></a>
                         <ul class="dropdown-menu" id="logout">
                             <li class="liste">
-                                <a href="#"><img alt="logout" src="images-master/logout-iactive.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
+                                <a href="#"><img alt="logout" src="images-master/logout-big.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">JA</a></li>
@@ -214,6 +214,8 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight">
+    <img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft">
 </body>
 
 </html>
