:dolphin: Changed: CHECK.htlm, navbar für mobile ansicht etwas verbessert - Fritz, Seda, Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -132,12 +132,13 @@
                 </ul>
 
 
-
-                <ul class="nav navbar-nav" id="logo">
-                    <li>
-                        <img alt="logo" src="images-master/logo.png">
-                    </li>
-                </ul>
+                <div>
+                    <ul class="nav navbar-nav collapse navbar-collapse" id="logo">
+                        <li>
+                            <img alt="logo" src="images-master/logo.png">
+                        </li>
+                    </ul>
+                </div>
 
 
 
