:cloud: Added: Check.Confirmation.html und css, CheckBestätigung.html, Changed: Check_Startseite.html, Check_Warning.html, Fritz, Vivian, Seda :cloud: Namen müssen noch angepasst werden sowie Formatierungen

--- a/CHECK_Startseite_BLue.html
+++ b/CHECK_Startseite_BLue.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="checkWarning.css">
+    <link rel="stylesheet" type="text/css" href="checkBlue.css">
 </head>
 
 </head>
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
                 <div id="sprechblase">
                     <input type="image" img src="img/CheckImg/delete.png" class="img-responsive" id="löschsymbol" alt="löschsymbol">
-                    <img src="img/CheckImg/warning.png" class="img-responsive" id="warnhinweis" alt="warnhinweis">
+                    <img src="img/CheckImg/advice.png" class="img-responsive" id="advice" alt="advice">
                     <div id="platzhalterText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
                     </div>
                 </div>
