:dolphin: Changed: CHECK.html u check.css, Dropdownmenü scrollable, Scrollbar unsichtbar, navbar unten - Fritz, Seda, Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -29,7 +29,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
                         </a>
-                        <ul class="dropdown-menu" id="chapterOverview">
+                        <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
                             <li class="liste">
                                 <a href="#"><img alt="confirmation" src="images-master/confirmation.png">CHECK! KOMPETENZENLISTE</a>
                             </li>
@@ -215,8 +215,17 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
     <img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight">
     <img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft">
+
+    <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+            <p id="footer"> CHECK!</p>
+            <p id="raupundritter"> www.raupundritter.com</p>
+        </div>
+    </nav>
+
 </body>
 
 </html>
