Changed: CHECK.html u check.css, unsichtbare Scrollbar für IE u Firefox - Seda,Fritz, Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -87,7 +87,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="achievedCompetencesPic">
                             <img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">
                         </a>
-                        <ul class="dropdown-menu" id="achievedCompetences">
+                        <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
                             <li class="liste">
                                 <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">DAS KANN ICH!</a>
                             </li>
