Changed: ..Jetzt Registrieren.. hinzugefügt - Vivian, Fritz, Seda

--- a/CHECK_Startseite.html
+++ b/CHECK_Startseite.html
@@ -27,15 +27,15 @@
                 <div class="form-group">
                     <!--<button type="submit" class="btn btn-default">LOS!</button>-->
                     <input type="image" img alt="button" src="img/Button.png" id="Login">
+                    <p id="RegistrierenEins">Sie möchten mit CHECK! arbeiten?</p>
+                    <p id="RegistrierenZwei">Jetzt registrieren.</p>
                 </div>
                 <img src="img/CheckImg/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
                 <p id="edition">edition 2016 dark night blue 1.0</p>
                 <div>
-                    <p id="ersteZeile">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</p>
+                    <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</br>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
                 </div>
-                <div>
-                    <p id="letzteZeile">www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
-                </div>
+
         </form>
         </div>
 
