--- a/CHECK_Startseite.html
+++ b/CHECK_Startseite.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="img/CheckImg/login/header.png" class="img-responsive" id="header" alt="Startseite">
+    <img src="images-master/login/header.png" class="img-responsive" id="header" alt="Startseite">
     <div class="col-md-6">
         <form>
             <div class="form-group">
@@ -26,11 +26,11 @@
 
                 <div class="form-group">
                     <!--<button type="submit" class="btn btn-default">LOS!</button>-->
-                    <input type="image" img alt="button" src="img/Button.png" id="Login">
+                    <input type="image" img alt="button" src="images-master/Button.png" id="Login">
                     <p id="RegistrierenEins">Sie möchten mit CHECK! arbeiten?</p>
                     <p id="RegistrierenZwei">Jetzt registrieren.</p>
                 </div>
-                <img src="img/CheckImg/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
+                <img src="images-master/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
                 <p id="edition">edition 2016 dark night blue 1.0</p>
                 <div>
                     <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</br>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
