--- a/CHECK.html
+++ b/CHECK.html
@@ -201,7 +201,7 @@
                             <img alt="logout" src="images-master/logout-iactive.png"></a>
                         <ul class="dropdown-menu" id="logout">
                             <li class="liste">
-                                <a href="#"><img alt="logout" src="images-master/logout-big.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
+                                <a href="#"><img alt="logout" src="images-master/logout-big.png">MÖCHTEST DU<br> CHECK! <br>VERLASSEN?</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">JA</a></li>
@@ -216,13 +216,17 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight">
-    <img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft">
+    <p><img alt="Lesen" src="images-master/chapter11/littleChapterFlag.png" id="littleChapterFlag"></p>
+    <p><img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft"></p>
+    <p><img style="float:right" alt="scrollUp" src="images-master/chapter10/scrollUp.png" id="scrollUp"></p>
+    <p><img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight"></p>
+    <p><img style="float:right" alt="scrollDown" src="images-master/chapter10/scrollDown.png" id="scrollDown"></p>
+
 
     <nav class="navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
-            <p id="footer"> CHECK!</p>
-            <p id="raupundritter"> www.raupundritter.com</p>
+            <p id="footerlogo"><img class="resize" alt="logo" src="images-master/logo.png"></p>
+            <p id="footertext"> edition 2016 dark night blue 1.0</p>
         </div>
     </nav>
 
