Changed: login.css/html, index.html, Added: new component

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/check.css">
-  <title>CheckOnline</title>
+  <title>CHECK!</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images-master/achievedCompetences-big.png">
 </head>
 
 <body>
