--- a/CHECK_Confirmation.html
+++ b/CHECK_Confirmation.html
@@ -9,45 +9,14 @@
     <link rel="stylesheet" type="text/css" href="checkconfirmation.css">
 </head>
 
-</head>
-
 <body>
-    <img src="img/CheckImg/login/header.png" class="img-responsive" id="header" alt="Startseite">
-    <div class="col-md-6">
-        <form>
-            <div class="form-group">
-                <!--/.BenutzernameÜberschrift... <label for="beispielFeldEmail1">Username</label> -->
-                <input type="email" class="form-control" id="Email" placeholder="Benutzername">
-            </div>
-            <div class="form-group">
-                <!--/.PasswortÜberschrift...  <label for="beispielFeldPasswort1">Passwort</label>-->
-                <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
-                <div id="sprechblase">
-                    <input type="image" img src="img/CheckImg/delete.png" class="img-responsive" id="löschsymbol" alt="löschsymbol">
-                    <img src="img/CheckImg/confirmation.png" class="img-responsive" id="confir" alt="oK">
-                    <div id="platzhalterText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
-                    </div>
-                </div>
-                <div class="form-group">
-                    <!--<button type="submit" class="btn btn-default">LOS!</button>-->
-                    <input type="image" img alt="button" src="img/Button.png" id="Login">
-                </div>
-                <img src="img/CheckImg/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
-                <p id="edition">edition 2016 dark night blue 1.0</p>
-                <div>
-                    <p id="ersteZeile">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</p>
-                </div>
-                <div>
-                    <p id="letzteZeile">www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
-                </div>
-        </form>
+
+    <div id="popup">
+        <input type="image" img src="images/delete.png" class="img-responsive" id="delete" alt="delete">
+        <img src="images/confirmation.png" class="img-responsive" id="configuration">
+        <div id="textfeld">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
         </div>
-
+    </div>
 </body>
 
 </html>
-</div>
-</body>
-
-</html>
-/html>
